# math-graph

./: .clang-format  CMakeLists.txt
include/: action.hpp  expression.hpp  function.hpp  independent_variable.hpp  mgraphfwd.hpp  number.hpp  operation.hpp  operator_action.hpp  parameter.hpp  pure_output.hpp  unnamed_parameter.hpp  unresolved_expression.hpp  variable.hpp
include/math_graph/: action.hpp  action_base.hpp  binary_operator_action.hpp  call_function_action.hpp  declaration.hpp  defined.hpp  defined_function.hpp  defined_variable.hpp  definition.hpp  dependency_map.hpp  dependency_values.hpp  dependent.hpp  equation.hpp  expression.hpp  func_dependent.hpp  function.hpp  function_declaration.hpp  function_definition.hpp  independent_variable.hpp  mgraphfwd.hpp  number.hpp  operation.hpp  operator_action.hpp  prioritized.hpp  pure_output.hpp  regex_tools.hpp  tools.hpp  unary_operation.hpp  unary_operator_action.hpp  unexpressed_function.hpp  unpack_variable_action.hpp  variable_declaration.hpp  variable_definition.hpp
src/: binary_operator_action.cpp  expression.cpp  function_declaration.cpp  main.cpp  operation.cpp  operator_action.cpp  tools.cpp  unary_operation.cpp  variable_declaration.cpp
test/: CMakeLists.txt  action.hpp  binary_operator_action.hpp  call_function_action.hpp  expression.cpp  expression.hpp  function.cpp  function.hpp  function_declaration.hpp  independent_variable.cpp  independent_variable.hpp  main.cpp  number.cpp  number.hpp  operation.cpp  operation.hpp  operator_action.hpp  tests.hpp  unary_operation.hpp  unary_operator_action.hpp  variable_declaration.hpp
